# MyFEM

./: CMakeLists.txt  README.md  frictionPenaltyStiffness.mn  linTet_dFdx.mn  material_Neohookean.mn  material_Neohookean_derivs.mn  material_NewtonianViscosity.mlx  material_PowerLawViscosity.mlx  material_RotInvariantViscosity_pot.mlx  material_linElast.mn  material_linElast_derivs.mn
src/: AdjointSensitivity.cpp  AdjointSensitivity.h  BoundaryFieldObjectiveFunction.cpp  BoundaryFieldObjectiveFunction.h  ContactFEM.cpp  ContactFEM.h  DifferentiableSpline.cpp  DifferentiableSpline.h  DirectSensitivity.cpp  DirectSensitivity.h  EigenmodeViscosityModel.cpp  EigenmodeViscosityModel.h  ElasticMaterialParameterHandler.cpp  ElasticMaterialParameterHandler.h  ElmerReader.cpp  ElmerReader.h  FrictionParameterHandler.cpp  FrictionParameterHandler.h  InitialConditionParameterHandler.cpp  InitialConditionParameterHandler.h  LinearFEM.cpp  LinearFEM.h  Materials.cpp  Materials.h  OldRemesher_WorldSpace.cpp  OldRemesher_WorldSpace.h.txt  PointCloudObjectiveFunction.cpp  PointCloudObjectiveFunction.h  PrincipalStretchMaterial.cpp  Remesher.cpp  Remesher.h  SensitivityAnalysis.h  TemporalInterpolationField.cpp  TemporalInterpolationField.h  ViscousMaterialParameterHandler.cpp  ViscousMaterialParameterHandler.h  codegen_Neohookean.h  codegen_Neohookean_derivs.h  codegen_NewtonianViscosity.h  codegen_NewtonianViscosity_derivs.h  (+21 more)
src/cmaes/: CMAMinimizer.cpp  CMAMinimizer.h  cmaes.c
